package com.cdyhrj.fastorm.entity;

/**
 * Entity
 *
 * @author <a href="mailto:huangqi@cdyhrj.com">黄奇</a>
 */
public interface Entity {
}
