@startuml
'https://plantuml.com/class-diagram
skin rose
hide methods
hide fields

interface Entity
interface Statement
interface Expression
class Where
interface Condition
interface EntityPeer

Statement . Entity
Where o. Statement : < 1
GroupCondition .* Where : < 1
Condition <|.. GroupCondition
Expression .* GroupCondition
Entity *-- EntityPeer

@enduml